[package]
name = "rimd"
description = "Library for handling Midi and reading and writing Standard Midi Files in Rust"
version = "0.0.3"
authors = ["Nick Lanham <nick@afternight.org>", "Alex Kesling <alex@kesling.co>"]
homepage = "https://github.com/RustAudio/rimd"
repository = "https://github.com/RustAudio/rimd"
documentation = "https://nicklan.github.io/rimd/target/doc/rimd/index.html"
readme = "README.md"
keywords = ["midi", "smf", "music", "audio", "mid"]
license = "MIT"

[dependencies]
byteorder = "1.3.2"
encoding = "0.2.*"
num-traits = "0.2.14"
num-derive = "0.3.3"
